@@ -1,5 +1,10 @@
 2008-11-14  kitone  <kitone@gna.org>
 
+	* src/Makefile.am:
+	Cleanup.
+
+2008-11-14  kitone  <kitone@gna.org>
+
 	* configure.in:
 	Remove unittest. (Patch: Luboš Staněk)
 
